--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -42,3 +42,42 @@
     border-radius: 10px;
   }
 }
+
+.card-details {
+  position: relative;
+  height: 500px;
+  width: 500px;
+  border-radius: 4px;
+  transition: 0.3s;
+  margin-right: 20px;
+  margin-top: 5%;
+
+  h2 {
+    font-size: 1rem;
+  }
+
+  &:hover {
+    transform: scale(1.1);
+    z-index: 2;
+  }
+
+  &:hover .infos {
+    opacity: 1;
+    transform: scaleY(1);
+  }
+
+  .infos {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.7);
+    color: $white;
+    height: 100%;
+    width: 100%;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    transition: 0.3s;
+  }
+}
