--- a/src/styles/components/accueil.scss
+++ b/src/styles/components/accueil.scss
@@ -1,11 +1,21 @@
 .accueil {
+  text-align: center;
 
-}
-
-.description {
-
+  img {
+    float: right;
+    border-radius: 10px;
+    height: 25rem;
+    margin-top: 50px;
+    margin-right: 10%;
+  }
 }
 
 .footer {
-    
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  border-radius: 4px;
+  height: 10%;
+  margin-bottom: 10px;
+  padding-top: 40px;
 }
