--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -8,13 +8,12 @@
       padding: 10px;
 
       li {
-        color: $color-1;
+        color: $color-2;
+        font-size: 20pt;
+        -webkit-text-stroke: 1px;
+        -webkit-text-stroke-color: $color-1;
         transition: 0.2s;
         cursor: pointer;
-
-        &:hover {
-          color: $color-3;
-        }
       }
     }
 
