--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,3 +2,4 @@
 @import "./components/navigation.scss";
 @import "./components/personnages.scss";
 @import "./components/card.scss";
+@import "./components/accueil.scss";
