--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,3 +3,4 @@
 @import "./components/personnages.scss";
 @import "./components/card.scss";
 @import "./components/accueil.scss";
+@import "./components/favoris.scss";
