--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -22,6 +22,7 @@ body {
   font-family: $font-1;
   // @include verticalCenter;
 }
+
 li {
   list-style-type: none;
 }
@@ -30,4 +31,5 @@ h1 {
   -webkit-text-stroke: 1px;
   -webkit-text-stroke-color: $color-2;
   font-size: 3rem;
+  text-align: center;
 }
